--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Gorilla</string>
+    <string name="what_s_on_your_mind">What\'s on your mind</string>
+    <string name="hello_jane">Hello Jane</string>
+    <string name="share_post_menu_title">Share</string>
 </resources>
